Pipeline changed by buddy

--- a/.buddy/ChatApp-Client.fixed.yml
+++ b/.buddy/ChatApp-Client.fixed.yml
@@ -33,6 +33,7 @@
     type: "SSH_COMMAND"
     commands:
     - "npm -v"
+    - "npm install"
     - "npm run build"
     - "npm run start"
     targets:
