--- a/.buddy/ChatApp-Client.fixed.yml
+++ b/.buddy/ChatApp-Client.fixed.yml
@@ -32,6 +32,15 @@
     - "node_modules/"
     targets:
     - "chatroom_ssh_user"
+  - action: "Execute npm run build"
+    type: "SSH_COMMAND"
+    commands:
+    - "npm -v"
+    - "npm install"
+    - "npm run build"
+    targets:
+    - "chatroom_ssh_user"
+    run_as_script: true
   - action: "Execute ls"
     type: "SSH_COMMAND"
     commands:
