Pipeline changed by buddy

--- a/.buddy/ChatApp-Client.fixed.yml
+++ b/.buddy/ChatApp-Client.fixed.yml
@@ -41,3 +41,12 @@
     targets:
     - "chatroom_ssh_user"
     run_as_script: true
+  - action: "Execute "
+    type: "SSH_COMMAND"
+    working_directory: "/home/chatroom-ssh"
+    commands:
+    - "./start.sh"
+    - ""
+    targets:
+    - "chatroom_ssh_user"
+    run_as_script: true
