--- a/.buddy/ChatApp-Client.fixed.yml
+++ b/.buddy/ChatApp-Client.fixed.yml
@@ -45,6 +45,7 @@
     type: "SSH_COMMAND"
     working_directory: "/home/chatroom-ssh"
     commands:
+    - "pwd"
     - "./start.sh"
     - ""
     targets:
